feature: add DELETE endpoint for organization
